--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,6 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "baseUrl": ".",
-    "strictNullChecks": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "react",
-    "paths": {
-      "~/*": ["src/*"]
-    }
+    "strictNullChecks": true
   }
 }
