--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.5.5",
+    "mdast-util-to-string": "^4.0.0",
+    "reading-time": "^1.5.0",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
